--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   },
   "homepage": "https://github.com/wwpearce/portfolio-site#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.26.3",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.2",
+    "gulp-watch": "^5.0.1",
+    "node-sass": "^4.10.0"
   },
   "dependencies": {
     "@babel/core": "^7.1.6",
