--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-sync": "^2.26.3",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.2",
+    "gulp-shell": "^0.6.5",
     "gulp-watch": "^5.0.1",
     "node-sass": "^4.10.0"
   },
