--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.26.3",
+    "eslint": "^5.9.0",
+    "eslint-loader": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.2",
     "gulp-shell": "^0.6.5",
