--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^5.9.0",
     "eslint-loader": "^2.1.1",
     "gulp": "^3.9.1",
+    "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2",
     "gulp-shell": "^0.6.5",
     "gulp-watch": "^5.0.1",
