--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-    "presets": ["@babel/preset-env"]
+  "env": {
+    "test": {
+      "presets": [
+        ["preact-cli/babel", { "modules": "commonjs" }]
+      ]
+    }
+  }
 }
