--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
-    "preact-router": "^2.5.7"
+    "preact-router": "^2.5.7",
+    "randomcolor": "^0.5.3"
   },
   "jest": {
     "verbose": true,
