--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass-loader": "^7.1.0"
   },
   "dependencies": {
+    "gsap": "^2.1.2",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7",
