--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7",
     "randomcolor": "^0.5.3",
-    "react-device-detect": "^1.6.2"
+    "react-device-detect": "^1.6.2",
+    "react-plx": "^1.3.13",
+    "react-scroll-parallax": "^2.1.2"
   },
   "jest": {
     "verbose": true,
