--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-device-detect": "^1.6.2",
     "react-plx": "^1.3.13",
     "react-scroll-parallax": "^2.1.2",
+    "react-scroll-trigger": "^0.5.3",
     "react-stickynode": "^2.1.1"
   },
   "jest": {
