--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "preact watch",
     "lint": "eslint src",
     "test": "jest",
-    "optimize-images": "imageoptim --help",
+    "optimize-images": "imageoptim 'src/assets/media'",
     "svgr": "svgr src/svg -d src/components/svg",
     "upload:staging": "aws s3 cp build s3://billwpearce.com.staging/ --recursive",
     "upload:production": "aws s3 cp build s3://billwpearce.com/ --recursive --dryrun && echo 'Remove dryrun if ur sure.'"
@@ -40,6 +40,7 @@
     "preact-router": "^2.5.7",
     "randomcolor": "^0.5.3",
     "react-device-detect": "^1.6.2",
+    "react-div-100vh": "^0.3.4",
     "react-plx": "^1.3.13",
     "react-scroll-parallax": "^2.1.2",
     "react-scroll-trigger": "^0.5.3",
