--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "optimize-images": "imageoptim 'src/assets/media'",
     "svgr": "svgr src/svg -d src/components/svg",
     "upload:staging": "aws s3 cp build s3://billwpearce.com.staging/ --recursive",
-    "upload:production": "aws s3 cp build s3://billwpearce.com/ --recursive --dryrun && echo 'Remove dryrun if ur sure.'"
+    "upload:production": "aws s3 cp build s3://billwpearce.com/ --recursive && echo 'Remove dryrun if ur sure.'",
+    "build:deploy": "npm run build && npm run upload:production"
   },
   "eslintConfig": {
     "extends": "eslint-config-synacor"
@@ -34,17 +35,13 @@
   },
   "dependencies": {
     "aws-sdk": "^2.440.0",
-    "gsap": "^2.1.2",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-router": "^2.5.7",
-    "randomcolor": "^0.5.3",
     "react-device-detect": "^1.6.2",
     "react-div-100vh": "^0.3.4",
     "react-plx": "^1.3.13",
-    "react-scroll-parallax": "^2.1.2",
-    "react-scroll-trigger": "^0.5.3",
-    "react-stickynode": "^2.1.1"
+    "react-scroll": "^1.7.11"
   },
   "jest": {
     "verbose": true,
