--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "preact-router": "^2.5.7",
     "react-device-detect": "^1.6.2",
     "react-div-100vh": "^0.3.4",
+    "react-ga": "^2.5.7",
     "react-plx": "^1.3.13",
     "react-scroll": "^1.7.11"
   },
