--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-div-100vh": "^0.3.4",
     "react-ga": "^2.5.7",
     "react-plx": "^1.3.13",
-    "react-scroll": "^1.7.11"
+    "react-scroll": "^1.7.11",
+    "react-window-size": "^1.2.2"
   },
   "jest": {
     "verbose": true,
